// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmbeddedComponent should render a default component 1`] = `null`;

exports[`EmbeddedComponent should use blank message when no placeholder is given 1`] = `null`;

exports[`EmbeddedComponent should use the custom timeout when timeout is given 1`] = `
<div>
  timeout
</div>
`;

exports[`EmbeddedComponent should use the default timeout when no timeout is given 1`] = `<DefaultTimeout />`;

exports[`EmbeddedComponent should use the placeholder message when placeholder is given 1`] = `
<div>
  placeholder
</div>
`;
